--- a/src/components/Navegation/Navegation.css
+++ b/src/components/Navegation/Navegation.css
@@ -2,18 +2,36 @@
            top:0px;
            height:13vh;
            color:#6ECCAF;
-           font-size:1.2rem; 
+           font-size:1.2rem;
+           width:100%;  
 }
 
 ul button{background-color: #344D67;
           color:#6ECCAF;
-          
+          transition:0.2s;
 }   
 
 ul button:hover{background-color:#6ECCAF;
-                       border-radius:15px;
-                       color: #344D67;
-}
+                border-radius:15px;
+                color: #344D67;
+                  
+} 
+
+.active{background-color:#6ECCAF;
+        border-radius:15px;
+        padding:5px;
+        }
+
+
+
+
+
+
+
+
+
+
+
 
 
 
