--- a/src/components/Navegation/Navegation.css
+++ b/src/components/Navegation/Navegation.css
@@ -6,33 +6,19 @@
            width:100%;  
 }
 
-ul button{background-color: #344D67;
-          color:#6ECCAF;
-          transition:0.2s;
-}   
 
-ul button:hover{background-color:#6ECCAF;
-                border-radius:15px;
-                color: #344D67;
+.subra{list-style: none;}   
+
+ul li:hover{background-color:#6ECCAF;
+            border-radius:10px;
+            color: #344D67;
                   
 } 
 
-.active{background-color:#6ECCAF;
-        border-radius:15px;
-        padding:5px;
-        }
-
-
-
-
-
-
-
-
-
-
-
-
+.active{color: #344D67!important;
+        background-color:#6ECCAF;
+        border-radius:10px;
+}
 
 
 
