--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,9 +1,9 @@
-.centrado-home{margin:200px 300px;
-               height:500px;
+.centrado-home{margin:200px 430px;
+               height:400px;
                background-color:#ffffffe6;
 }
 
-.titulo-home{color:#344D67;
+.titulo-home{color:red;
              margin-bottom:120px;}  
 
          
