--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   font-family:'Raleway',sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; 
-  background-image: url(../public/imagenes/rickymorty.jpeg);
+  background-image: url(../public/imagenes/ferreteria.jpg);
   background-attachment: fixed;
   background-size: cover;
 } 
